@@ -243,12 +243,15 @@ def inject_message(resending,
     if Defaults.FINGERPRINT:
 	hdrlist = []
 	for hdr in Defaults.FINGERPRINT:
-	    hdrval = message_headers.getheader(hdr, None)
+            if hdr == 'body':
+                hdrval = message_body
+            else:
+                hdrval = message_headers.getheader(hdr, None)
 	    if hdrval:
 		hdrlist.append(hdrval)
 	if hdrlist:
-	    message_headers['X-TMDA-Fingerprint'] = (
-		Cookie.make_fingerprint(hdrlist))
+	    message_headers['X-TMDA-Fingerprint'] = (Cookie.make_fingerprint
+                                                     (hdrlist))
     # Optionally, remove some headers.
     if Defaults.PURGED_HEADERS:
 	for hdr in Defaults.PURGED_HEADERS:
