@@ -1,3 +1,9 @@
+2002-02-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* tmda-inject (inject_message): If Defaults.FINGERPRINT contains
+	'body', append the message body to the list passed to
+	Cookie.make_fingerprint().
+	
 2002-02-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-*: Add -V, --version options.
